// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should have custom styles when adding the style props 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
    }
  }
>
  <View
    pointerEvents="box-none"
  >
    <View
      pointerEvents="none"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
    >
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={3}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -2,
              "position": "absolute",
              "top": 30,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 3,
            },
          ]
        }
        width={3}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="left"
              x1="1"
              x2="0"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "left",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={2}
            x={0}
            y={-60}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={3}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": 30,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 3,
            },
          ]
        }
        width={3}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="right"
              x1="0"
              x2="1"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "right",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={2}
            x={0}
            y={-60}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={3}
        bbWidth="100%"
        focusable={false}
        height={3}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 30,
              "position": "absolute",
              "top": "100%",
            },
            Object {
              "flex": 0,
              "height": 3,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="bottom"
              x1="0"
              x2="0"
              y1="0"
              y2="1"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "bottom",
              ]
            }
            height={2}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-60}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={3}
        bbWidth="100%"
        focusable={false}
        height={3}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 30,
              "position": "absolute",
              "top": -2,
            },
            Object {
              "flex": 0,
              "height": 3,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="top"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "top",
              ]
            }
            height={2}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-60}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={33}
        bbWidth={33}
        focusable={false}
        height={33}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -2,
              "position": "absolute",
              "top": -2,
            },
            Object {
              "flex": 0,
              "height": 33,
              "width": 33,
            },
          ]
        }
        width={33}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={32}
              cy={32}
              fx={32}
              fy={32}
              gradient={
                Array [
                  0.9375,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topLeft"
              rx={32}
              ry={32}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,32 a32,32 0 0 1 32 -32 v2 a30,30 0 0 0 -30,30 h-2 Z"
            fill={
              Array [
                1,
                "topLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={33}
        bbWidth={33}
        focusable={false}
        height={33}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": -2,
              "transform": Array [
                Object {
                  "translateX": -30,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 33,
              "width": 33,
            },
          ]
        }
        width={33}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={32}
              fx={0}
              fy={32}
              gradient={
                Array [
                  0.9375,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topRight"
              rx={32}
              ry={32}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,0 a32,32 0 0 1 32,32 h-2 a30,30 0 0 0 -30,-30 v-2 Z"
            fill={
              Array [
                1,
                "topRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={33}
        bbWidth={33}
        focusable={false}
        height={33}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -2,
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateY": -30,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 33,
              "width": 33,
            },
          ]
        }
        width={33}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={32}
              cy={0}
              fx={32}
              fy={0}
              gradient={
                Array [
                  0.9375,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomLeft"
              rx={32}
              ry={32}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M32,32 a32,32 0 0 1 -32,-32 h2 a30,30 0 0 0 30,30 v2 Z"
            fill={
              Array [
                1,
                "bottomLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={33}
        bbWidth={33}
        focusable={false}
        height={33}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateX": -30,
                },
                Object {
                  "translateY": -30,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 33,
              "width": 33,
            },
          ]
        }
        width={33}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={0}
              fx={0}
              fy={0}
              gradient={
                Array [
                  0.9375,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomRight"
              rx={32}
              ry={32}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M32,0 a32,32 0 0 1 -32,32 v-2 a30,30 0 0 0 30,-30 h2 Z"
            fill={
              Array [
                1,
                "bottomRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
          },
          undefined,
          Object {
            "width": "100%",
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={false}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#B87015",
            "borderRadius": 30,
            "flexDirection": "row-reverse",
            "height": 60,
            "justifyContent": "center",
            "opacity": 1,
            "padding": 13,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFCF1",
                "fontFamily": "Cairo-SemiBold",
                "fontSize": 20,
              },
              undefined,
            ]
          }
        >
          click
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button Component should renders correctly 1`] = `
<View>
  <View
    pointerEvents="box-none"
  >
    <View
      pointerEvents="none"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
    >
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={3}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -2,
              "position": "absolute",
              "top": 30,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 3,
            },
          ]
        }
        width={3}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="left"
              x1="1"
              x2="0"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "left",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={2}
            x={0}
            y={-60}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={3}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": 30,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 3,
            },
          ]
        }
        width={3}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="right"
              x1="0"
              x2="1"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "right",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={2}
            x={0}
            y={-60}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={3}
        bbWidth="100%"
        focusable={false}
        height={3}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 30,
              "position": "absolute",
              "top": "100%",
            },
            Object {
              "flex": 0,
              "height": 3,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="bottom"
              x1="0"
              x2="0"
              y1="0"
              y2="1"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "bottom",
              ]
            }
            height={2}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-60}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={3}
        bbWidth="100%"
        focusable={false}
        height={3}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 30,
              "position": "absolute",
              "top": -2,
            },
            Object {
              "flex": 0,
              "height": 3,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="top"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "top",
              ]
            }
            height={2}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-60}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={33}
        bbWidth={33}
        focusable={false}
        height={33}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -2,
              "position": "absolute",
              "top": -2,
            },
            Object {
              "flex": 0,
              "height": 33,
              "width": 33,
            },
          ]
        }
        width={33}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={32}
              cy={32}
              fx={32}
              fy={32}
              gradient={
                Array [
                  0.9375,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topLeft"
              rx={32}
              ry={32}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,32 a32,32 0 0 1 32 -32 v2 a30,30 0 0 0 -30,30 h-2 Z"
            fill={
              Array [
                1,
                "topLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={33}
        bbWidth={33}
        focusable={false}
        height={33}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": -2,
              "transform": Array [
                Object {
                  "translateX": -30,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 33,
              "width": 33,
            },
          ]
        }
        width={33}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={32}
              fx={0}
              fy={32}
              gradient={
                Array [
                  0.9375,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topRight"
              rx={32}
              ry={32}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,0 a32,32 0 0 1 32,32 h-2 a30,30 0 0 0 -30,-30 v-2 Z"
            fill={
              Array [
                1,
                "topRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={33}
        bbWidth={33}
        focusable={false}
        height={33}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -2,
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateY": -30,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 33,
              "width": 33,
            },
          ]
        }
        width={33}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={32}
              cy={0}
              fx={32}
              fy={0}
              gradient={
                Array [
                  0.9375,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomLeft"
              rx={32}
              ry={32}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M32,32 a32,32 0 0 1 -32,-32 h2 a30,30 0 0 0 30,30 v2 Z"
            fill={
              Array [
                1,
                "bottomLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={33}
        bbWidth={33}
        focusable={false}
        height={33}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateX": -30,
                },
                Object {
                  "translateY": -30,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 33,
              "width": 33,
            },
          ]
        }
        width={33}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={0}
              fx={0}
              fy={0}
              gradient={
                Array [
                  0.9375,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomRight"
              rx={32}
              ry={32}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M32,0 a32,32 0 0 1 -32,32 v-2 a30,30 0 0 0 30,-30 h2 Z"
            fill={
              Array [
                1,
                "bottomRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
          },
          undefined,
          Object {
            "width": "100%",
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={false}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#B87015",
            "borderRadius": 30,
            "flexDirection": "row-reverse",
            "height": 60,
            "justifyContent": "center",
            "opacity": 1,
            "padding": 13,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFCF1",
                "fontFamily": "Cairo-SemiBold",
                "fontSize": 20,
              },
              undefined,
            ]
          }
        >
          click
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button Component should show the icon when passing the icon prop 1`] = `
<View>
  <View
    pointerEvents="box-none"
  >
    <View
      pointerEvents="none"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
    >
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={3}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -2,
              "position": "absolute",
              "top": 30,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 3,
            },
          ]
        }
        width={3}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="left"
              x1="1"
              x2="0"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "left",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={2}
            x={0}
            y={-60}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={3}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": 30,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 3,
            },
          ]
        }
        width={3}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="right"
              x1="0"
              x2="1"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "right",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={2}
            x={0}
            y={-60}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={3}
        bbWidth="100%"
        focusable={false}
        height={3}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 30,
              "position": "absolute",
              "top": "100%",
            },
            Object {
              "flex": 0,
              "height": 3,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="bottom"
              x1="0"
              x2="0"
              y1="0"
              y2="1"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "bottom",
              ]
            }
            height={2}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-60}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={3}
        bbWidth="100%"
        focusable={false}
        height={3}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 30,
              "position": "absolute",
              "top": -2,
            },
            Object {
              "flex": 0,
              "height": 3,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="top"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "top",
              ]
            }
            height={2}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-60}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={33}
        bbWidth={33}
        focusable={false}
        height={33}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -2,
              "position": "absolute",
              "top": -2,
            },
            Object {
              "flex": 0,
              "height": 33,
              "width": 33,
            },
          ]
        }
        width={33}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={32}
              cy={32}
              fx={32}
              fy={32}
              gradient={
                Array [
                  0.9375,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topLeft"
              rx={32}
              ry={32}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,32 a32,32 0 0 1 32 -32 v2 a30,30 0 0 0 -30,30 h-2 Z"
            fill={
              Array [
                1,
                "topLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={33}
        bbWidth={33}
        focusable={false}
        height={33}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": -2,
              "transform": Array [
                Object {
                  "translateX": -30,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 33,
              "width": 33,
            },
          ]
        }
        width={33}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={32}
              fx={0}
              fy={32}
              gradient={
                Array [
                  0.9375,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topRight"
              rx={32}
              ry={32}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,0 a32,32 0 0 1 32,32 h-2 a30,30 0 0 0 -30,-30 v-2 Z"
            fill={
              Array [
                1,
                "topRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={33}
        bbWidth={33}
        focusable={false}
        height={33}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -2,
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateY": -30,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 33,
              "width": 33,
            },
          ]
        }
        width={33}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={32}
              cy={0}
              fx={32}
              fy={0}
              gradient={
                Array [
                  0.9375,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomLeft"
              rx={32}
              ry={32}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M32,32 a32,32 0 0 1 -32,-32 h2 a30,30 0 0 0 30,30 v2 Z"
            fill={
              Array [
                1,
                "bottomLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={33}
        bbWidth={33}
        focusable={false}
        height={33}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateX": -30,
                },
                Object {
                  "translateY": -30,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 33,
              "width": 33,
            },
          ]
        }
        width={33}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={0}
              fx={0}
              fy={0}
              gradient={
                Array [
                  0.9375,
                  -1632211950,
                  1,
                  11955218,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomRight"
              rx={32}
              ry={32}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M32,0 a32,32 0 0 1 -32,32 v-2 a30,30 0 0 0 30,-30 h2 Z"
            fill={
              Array [
                1,
                "bottomRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
          },
          undefined,
          Object {
            "width": "100%",
          },
        ]
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={false}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#B87015",
            "borderRadius": 30,
            "flexDirection": "row-reverse",
            "height": 60,
            "justifyContent": "center",
            "opacity": 1,
            "padding": 13,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFCF1",
                "fontFamily": "Cairo-SemiBold",
                "fontSize": 20,
              },
              undefined,
            ]
          }
        >
          click
        </Text>
        <View
          style={
            Object {
              "marginRight": 20,
              "width": 18,
            }
          }
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "process": [Function],
              }
            }
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
